layout bug fix.

--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -1,3 +1,7 @@
+body {
+  cursor: crosshair;
+}
+
 .masthead {
   min-height: 80vh;
 }
