--- a/src/styles/styles.module.css
+++ b/src/styles/styles.module.css
@@ -35,7 +35,7 @@
     height: 400px;
     position: absolute;
     top: -18rem;
-    left: 3rem;
+    left: 2rem;
   }
 }
 
@@ -50,9 +50,15 @@
 
 .service {
   justify-content: space-between;
-  padding: 5.5rem 1.25rem;
-  margin-top: 3rem;
-  margin-bottom: 3rem;
+}
+
+@media (min-width: 992px) {
+  .service {
+    justify-content: space-between;
+    padding: 5.5rem 1.25rem;
+    margin-top: 3rem;
+    margin-bottom: 3rem;
+  }
 }
 
 /*
@@ -62,10 +68,16 @@
 .workProcess {
   min-height: 100vh;
   color: rgb(251, 248, 248);
-  padding: 3rem 3rem;
+  padding: 3rem 1.5rem;
   display: flex;
   flex-direction: column;
   justify-content: center;
+}
+
+@media (min-width: 992px) {
+  .workProcess {
+    padding: 3rem;
+  }
 }
 
 .workProcess .bigHeading {
@@ -77,13 +89,18 @@
 
 .workProcess .processes {
   display: flex;
-  flex-wrap: nowrap;
-  align-items: center;
-  padding: 2rem 0.5rem;
-  max-width: 100%;
-  overflow-x: hidden;
+  flex-direction: column;
 }
 
+@media (min-width: 992px) {
+  .workProcess .processes {
+    flex-direction: row;
+    flex-wrap: nowrap;
+    align-items: center;
+    padding: 2rem 0.5rem;
+    overflow-x: auto;
+  }
+}
 /*
 ** Call To Action Styles.
 */
